--- a/workshops/workshop-2/src/index.css
+++ b/workshops/workshop-2/src/index.css
@@ -1,3 +1,43 @@
+html,
 body {
+  height: 100%;
+  width: 100%;
   margin: 0;
+  font-size: 16px;
+  color: #c8c8c8;
+  background-color: #272b30;
+}
+
+#root {
+  min-height: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  padding: 12px;
+  background-color: white;
+  border: 1px solid black;
+  cursor: pointer;
+  border-radius: 2px;
+  font-size: 0.8rem;
+}
+
+button:hover {
+  background: black;
+  color: white;
+}
+
+button:disabled {
+  pointer-events: none;
 }
